--- a/04/Makefile
+++ b/04/Makefile
@@ -2,5 +2,7 @@ vector.o : Vector.hpp Vector.cpp
 	g++ -c Vector.cpp -o vector.o
 main.o : main.cpp
 	g++ -c main.cpp -o main.o
-main : main.o Vector.o
-	g++ main.o Vector.o -o main
+bigint.o : BigInt.hpp BigInt.cpp
+	g++ -c BigInt.cpp -o bigint.o
+main : main.o Vector.o bigint.o
+	g++ main.o Vector.o bigint.o -o main
