--- a/04/Makefile
+++ b/04/Makefile
@@ -1,8 +1,10 @@
 vector.o : Vector.hpp Vector.cpp
-	g++ -c Vector.cpp -o vector.o
+	g++ -c -g Vector.cpp -o vector.o
 main.o : main.cpp
-	g++ -c main.cpp -o main.o
+	g++ -c -g main.cpp -o main.o
 bigint.o : BigInt.hpp BigInt.cpp
-	g++ -c BigInt.cpp -o bigint.o
+	g++ -c -g BigInt.cpp -o bigint.o
 main : main.o Vector.o bigint.o
-	g++ main.o Vector.o bigint.o -o main
+	g++ -g main.o Vector.o bigint.o -o main
+clean : 
+	rm -rf main.o main bigint.o vector.o
