--- a/04/Makefile
+++ b/04/Makefile
@@ -1,10 +1,12 @@
-vector.o : Vector.hpp Vector.cpp
-	g++ -c -g Vector.cpp -o vector.o
+main : main.o bigint.o
+	g++ -g main.o bigint.o -o main
 main.o : main.cpp
 	g++ -c -g main.cpp -o main.o
 bigint.o : BigInt.hpp BigInt.cpp
 	g++ -c -g BigInt.cpp -o bigint.o
-main : main.o Vector.o bigint.o
-	g++ -g main.o Vector.o bigint.o -o main
 clean : 
-	rm -rf main.o main bigint.o vector.o
+	rm -rf main.o main bigint.o
+test.o : test.cpp
+	g++ -g test.cpp -c -o test.o
+test : bigint.o test.o
+	g++ -g test.o bigint.o -o test
