--- a/04/Makefile
+++ b/04/Makefile
@@ -5,8 +5,14 @@ main.o : main.cpp
 bigint.o : BigInt.hpp BigInt.cpp
 	g++ -c -g BigInt.cpp -o bigint.o
 clean : 
-	rm -rf main.o main bigint.o
+	rm -rf main.o main bigint.o test.o test
 test.o : test.cpp
 	g++ -g test.cpp -c -o test.o
-test : bigint.o test.o
+Test : bigint.o test.o
 	g++ -g test.o bigint.o -o test
+generate : 
+	python3 generate.py
+test : Test
+	python3 test.py
+run : main
+	./main
